Archive2/70/d89d2d7130a658/output
main.cpp: In function 'int main()':
main.cpp:110:8: error: request for member 'show' in 'q2', which is of non-class type 'Queue<A>()'
     q2.show();
        ^
